--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/tasks.json
-!.vscode/launch.json
+.vscode/launch.json
 *.code-workspace
 
 ### VisualStudioCode Patch ###
